Compiler plugin (#26)
* Implement processor as compiler plugin.
* Implement javac plugin.
* Fix java doc plugin configuration.
* Report errors through logger.